test(reservation-request-service): fix KafkaTemplate injection and stabilize availability tests
- Fixed issue where ReservationRequestService used wrong KafkaTemplate mock
  (reservationKafkaTemplate instead of requestRespondedEventKafkaTemplate)
- Explicitly injected correct KafkaTemplate mock via ReflectionTestUtils in @BeforeEach
- Ensured repository.save, reservationRepository.save and availabilityRepository.save
  always return entities with non-null IDs in tests
- Stubbed objectMapper.writeValueAsString to always return dummy JSON
- Added debug/try-catch in overlap scenario test to trace execution flow
- Stabilized availability adjustment tests (scenario 1–4, no-overlap) so they pass
  both in isolation and when running the whole test suite
- Verified RequestRespondedEvent is properly emitted with correct data